// src/core/__tests__/systemd-generator.test.ts
import { describe, it, expect } from "vitest";
import { generateSystemdService, generateDashboardService } from "../systemd-generator.js";

const opts = {
  slug: "demo1",
  displayName: "Demo One",
  port: 18789,
  stateDir: "/opt/openclaw/.openclaw-demo1",
  configPath: "/opt/openclaw/.openclaw-demo1/openclaw.json",
  openclawHome: "/opt/openclaw",
  openclawBin: "/opt/openclaw/.npm-global/bin/openclaw",
  uid: 1000,
};

describe("generateSystemdService", () => {
  it("includes critical env vars (OPENCLAW_PROFILE, STATE_DIR, CONFIG_PATH)", () => {
    const service = generateSystemdService(opts);
    expect(service).toContain("OPENCLAW_PROFILE=demo1");
    expect(service).toContain(`OPENCLAW_STATE_DIR=${opts.stateDir}`);
    expect(service).toContain(`OPENCLAW_CONFIG_PATH=${opts.configPath}`);
  });

  it("includes correct port", () => {
    const service = generateSystemdService(opts);
    expect(service).toContain("--port 18789");
    expect(service).toContain("OPENCLAW_GATEWAY_PORT=18789");
  });

  it("logs to stateDir/logs/gateway.log", () => {
    const service = generateSystemdService(opts);
    expect(service).toContain(`${opts.stateDir}/logs/gateway.log`);
  });

  it("has WantedBy=default.target", () => {
    const service = generateSystemdService(opts);
    expect(service).toContain("WantedBy=default.target");
  });

  it("uses the provided binary path", () => {
    const service = generateSystemdService(opts);
    expect(service).toContain(opts.openclawBin);
  });

  it("sets XDG_RUNTIME_DIR based on uid", () => {
    const service = generateSystemdService(opts);
    expect(service).toContain("XDG_RUNTIME_DIR=/run/user/1000");
  });

  it("computes correct XDG_RUNTIME_DIR for different UIDs", () => {
    const service = generateSystemdService({ ...opts, uid: 996 });
    expect(service).toContain("XDG_RUNTIME_DIR=/run/user/996");
  });

  it("matches full service unit snapshot", () => {
    const service = generateSystemdService(opts);
    expect(service).toMatchSnapshot();
  });
});

describe("generateDashboardService", () => {
  const dashOpts = {
    nodeBin: "/usr/local/bin/node",
    clawPilotBin: "/opt/claw-pilot/dist/index.mjs",
    port: 19000,
    home: "/home/openclaw",
    uid: 1000,
  };

  it("includes correct port and binary paths", () => {
    const service = generateDashboardService(dashOpts);
    expect(service).toContain("--port 19000");
    expect(service).toContain(dashOpts.nodeBin);
    expect(service).toContain(dashOpts.clawPilotBin);
  });

  it("sets XDG_RUNTIME_DIR based on uid", () => {
    const service = generateDashboardService(dashOpts);
    expect(service).toContain("XDG_RUNTIME_DIR=/run/user/1000");
  });

  it("matches full dashboard service snapshot", () => {
    const service = generateDashboardService(dashOpts);
    expect(service).toMatchSnapshot();
  });
});
